Set mail Fix alignment of mastersection

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -10643,7 +10643,7 @@ a:hover {
 }
 
 header.masthead {
-  padding-top: 10rem;
+  padding-top: calc(10rem + 50px);
   padding-bottom: calc(10rem - 50px);
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(73, 80, 87, 0.8)), to(rgba(73, 80, 87, 0.8))), url("../resources/bg-masthead.jpg");
   background: linear-gradient(to bottom, rgba(73, 80, 87, 0.8) 0%, rgba(73, 80, 87, 0.8) 100%), url("../resources/bg-masthead.jpg");
