--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,6 +1,6 @@
 // Styling for the masthead
 header.masthead {
-  padding-top: 10rem;
+  padding-top: calc(10rem + #{$navbar-height});
   padding-bottom: calc(10rem - #{$navbar-height});
   // replace the masthead.jpg image in the /img directory to change the image
   // if the image name change, make sure to update the url path below!
